cria alterar de cliente

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "urls": "https://localhost:5000"
+  "AllowedHosts": "*"
 }
