--- a/Pizzaria.Tests/Pizzaria.Tests.csproj
+++ b/Pizzaria.Tests/Pizzaria.Tests.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2023.3.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+    <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="xunit" Version="2.6.6" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.6">
       <PrivateAssets>all</PrivateAssets>
@@ -18,6 +19,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Backend\Pizzaria.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="PedidoFinalControllerTests.cs" />
   </ItemGroup>
   
 </Project>
